fixing spacing

--- a/blocks/learn-more/learn-more.css
+++ b/blocks/learn-more/learn-more.css
@@ -190,6 +190,10 @@
     padding-right: 0px
   }
 
+  .learn-more-wrapper :is(.md\:pt-12) {
+    padding-top: 3rem
+  }
+
   .learn-more-wrapper :is(.md\:text-left) {
     text-align: left
   }
